# kpi-hydroponic

./: Курсова.docx  Михайлович.docx
Backend/: .gitignore  pyproject.toml  scripts.py
Backend/database/MS SQL Server Scripts/: MS SQL Server Scripts.ssmssln
Backend/database/MS SQL Server Scripts/MS SQL Server Scripts/: 10_CONFIG.txt  11_RECONFIGURE.sql  12_TEST.sql  1_CREATE_DATABASE.sql  2_CREATE_TABLES.sql  3_CREATE_INDEXES.sql  4_INSERT_DATA.sql  5_SELECT.sql  6_CLEAR.sql  7_DROP_TABLES.sql  8_ADD_TRIGGERS.sql  9_GRANTS.sql  MS SQL Server Scripts.ssmssqlproj
Backend/server/: main.py
Backend/server/database_driver/: database.py  dataclasses.py  iot_playground.py
Backend/server/routers/: api.py
Backend/server/security/: dataclasses.py  hasher_password.py  json_web_token.py  security.py
Backend/test/: test_api.py  test_back.py
Test_external/Back/Bruno/: Server EmeraldWater.json
Test_external/Back/Bruno_src/Server EmeraldWater/: Delete User.bru  Get Startup Time.bru  Login.bru  Read Users Me.bru  Register.bru  (+3 more)
Test_external/Back/Postman/: Server EmeraldWater.json
Test_external/Back/Swagger/: openapi.json
Test_external/Diagrams/ComponentDiagram/: component_diagram.puml
Test_external/Diagrams/UseCase/: UseCase.puml
Test_external/JMeter/: EmeraldWater.jmx
Test_external/Web/SeleniumDriver/: pyproject.toml
Test_external/Web/SeleniumDriver/seleniumdriver/: test_main.py
Test_external/Web/SeleniumIDE/: EmeraldWater.side
Web/EmeraldWater/: index.html  package-lock.json  package.json
Web/EmeraldWater/src/: dev_script.js  index.css  index.js
(+55 files in other folders)
