[tool.poetry]
name = "seleniumdriver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
selenium = "^4.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
